# supply-chain-simulator

./: .gitignore  DashboardPrototype.ipynb  brazil_supply_chain_simulation.py  country_simulation_analysis.ipynb  global_simulation_analysis.ipynb  prep_data.py  pyproject.toml  readme.md  simulation.py  simulation_results.csv  tests.ipynb
calibration_models/: plot_farmsize_distribution.ipynb
data/: country_assums.csv  country_codes.json  simulation_data.json  supply_chain_summary.csv
docs/: readme.md
models/: base.py
supply_chain_simulator/: DashboardPrototype.ipynb  dashboard.py  database.py  initialize.py  main.py  models.py  prep_country_assums.py  seed_country_chains.py  trade_sim.py
supply_chain_simulator/archive/: prep_country_assums.py  seed_country_chains.py  simulator.py  simulator_graph.py
supply_chain_simulator/config/: config.py  settings.py  simulation.py
supply_chain_simulator/database/: manager.py  registries.py  schemas.py
supply_chain_simulator/models/: actors.py  base.py  geography.py  relationships.py  trade_flow.py
supply_chain_simulator/simulations/: analytics.py  initialize.py  middleman_geographies.py  simulate.py  trade.py
