[tool.poetry]
name = "supply-chain-simulator"
version = "0.1.0"
description = "Simulate coffee supply chain dynamics"
authors = ["Carl Cervone <carl.cervone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.0.0"
scipy = "^1.14.1"
seaborn = "^0.13.2"
pyarrow = "^18.1.0"
streamlit = "^1.40.2"
pathlib = "^1.0.1"
datetime = "^5.5"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
